--- a/homepage/public/Terms & Conditions/index.html
+++ b/homepage/public/Terms & Conditions/index.html
@@ -1,2 +1,10 @@
-<!doctype html><html lang=ja><head><title>https://hpcb.jp/terms/</title>
-<link rel=canonical href=https://hpcb.jp/terms/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://hpcb.jp/terms/"></head></html>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <title>http://localhost:1313/terms/</title>
+    <link rel="canonical" href="http://localhost:1313/terms/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=http://localhost:1313/terms/">
+  </head>
+</html>
